commit al master del blogpost en su version mas reciente

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>Git y GitHub Profesional</title>
 </head>
 <body>
-    <h1>Git y GitHub Profesional</h1>
-
-    <h2>Nunca pares de Aprender 💚📗</h2>
+    <div id="container">
+        <div id="post">
+            <h1>Git y GitHub Profesional</h1>
+            <h2>Nunca pares de Aprender 💚📗</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, ipsam dolore eligendi iure sunt deserunt ea quibusdam nobis, quaerat neque impedit possimus placeat veniam maiores corporis non quasi pariatur ab.
+            Obcaecati ab neque dolorum dolores. Pariatur provident quisquam nostrum fugiat? Ullam id sint impedit provident, labore atque nobis illo, delectus numquam officiis earum alias accusantium quaerat eum enim veniam pariatur!
+            </p>
+        </div>
+    </div>
 </body>
 </html>
