--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Git y GitHub Profesional</title>
 </head>
 <body>
+    <div id="cabecera">
+        cabecera
+    </div>
     <div id="container">
         <div id="post">
             <h1>Git y GitHub Profesional</h1>
